--- a/TriadApp/templates/TriadApp/login.html
+++ b/TriadApp/templates/TriadApp/login.html
@@ -180,9 +180,26 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
+                    let welcomeMessage = '';
+                    
+                    // Customize welcome message based on user type
+                    switch(data.userType) {
+                        case 'superadmin':
+                            welcomeMessage = `Welcome to Super Admin Panel ${data.name}!`;
+                            break;
+                        case 'admin':
+                            welcomeMessage = `Welcome to ${data.stallName} Admin ${data.name}!`;
+                            break;
+                        case 'employee':
+                            welcomeMessage = `Welcome back to ${data.stallName} ${data.name}!`;
+                            break;
+                        default:
+                            welcomeMessage = `Welcome back, ${data.name}!`;
+                    }
+                    
                     Swal.fire({
                         icon: 'success',
-                        title: `Welcome back, ${data.name}!`,
+                        title: welcomeMessage,
                         text: 'You have successfully logged in',
                         timer: 1500,
                         timerProgressBar: true,
